2006-11-27 Borut Razem <borut.razem AT siol.net>

	* support\cpp2\cppexp.c, support\cpp2\hashtable.h,
	  support\cpp2\Makefile.in, support\cpp2\cppfiles.c,
	  support\cpp2\output.h, support\cpp2\cppinit.c,
	  support\cpp2\cpplib.c, support\cpp2\cpplib.h,
	  support\cpp2\Makefile.bcc, support\cpp2\cpphash.c,
	  support\cpp2\cppdefault.c, support\cpp2\system.h,
	  support\cpp2\cpphash.h, support\cpp2\cpplex.c,
	  support\cpp2\cppdefault.h, support\cpp2\mbchar.c,
	  support\cpp2\prefix.c, support\cpp2\except.h,
	  support\cpp2\hwint.h, support\cpp2\cppmacro.c,
	  support\cpp2\line-map.h, support\cpp2\sdcpp.dsp,
	  support\cpp2\sdcc.h, support\cpp2\mkdeps.c,
	  support\cpp2\version.c, support\cpp2\cppmain.c,
	  support\cpp2\version.h, support\cpp2\hashtable.c,
	  support\cpp2\cpperror.c:
	  synchronized with GCC CPP release version 3.3.6,
	  the latest where cppmain.c still exists.
	* support\cpp2\cpptrad.c, support\cpp2\sdcppmain.c,
	  support\cpp2\sdcppinit.c: added

2006-11-27 Borut Razem <borut.razem AT siol.net>

	* support/cpp2/cpplex.c:
	  fixed _asm ... _endasm handling bug, introduce with GCC CPP
	  synchronization
	* support/cpp2/cpplib.c: removed definitions of unused variables

2006-11-26 Borut Razem <borut.razem AT siol.net>

	* support/cpp2/libiberty.h: commented out x*alloc() declarations
	  since they are redefined by macros in support/cpp2/sdcc.h
	* support/cpp2/sdcc.h: x*alloc macro redefinition

2006-11-25 Borut Razem <borut.razem AT siol.net>

	* support/cpp2/cppexp.c, support/cpp2/hashtable.h,
	  support/cpp2/configure, support/cpp2/Makefile.in,
	  support/cpp2/cppfiles.c, support/cpp2/output.h,
	  support/cpp2/cppinit.c, support/cpp2/cpplib.c,
	  support/cpp2/config.h, support/cpp2/cpplib.h,
	  support/cpp2/Makefile.bcc, support/cpp2/cpphash.c,
	  support/cpp2/cppdefault.c, support/cpp2/config.in,
	  support/cpp2/system.h, support/cpp2/cpplex.c,
	  support/cpp2/cpphash.h, support/cpp2/mbchar.c,
	  support/cpp2/cppdefault.h, support/cpp2/prefix.c